Bug 946224 - Alphabets on right side in the contact book are too small to select

--- a/shared/style/scrolling.css
+++ b/shared/style/scrolling.css
@@ -51,7 +51,7 @@ nav[data-type="scrollbar"] li {
   text-align: center;
   text-transform: uppercase;
   width: 4.5rem;
-  height: 3.45%; /* 100% / 29 items */
+  height: 3.44%; /* 100% / 29 items */
 }
 
 nav[data-type="scrollbar"] li a {
